# advanced-ml-02460

./: .gitignore  README.md  pyproject.toml
assignment-1/: README.md  pyproject.toml
assignment-1/report/: report.tex
assignment-1/report/Figures/: ELBO.txt  summary.txt
assignment-1/src/: ddpm.py  latent_ddpm.py  report_metrics.py
assignment-2/report/: report.tex  template.bib  template2.tex
assignment-2/src/: ensemble_vae.py
assignment-3/: pyproject.toml
assignment-3/report/: references.bib  report.tex
assignment-3/src/: baseline.py  data.py  evaluate.py  metrics.py  model.py  train.py
report/: report.tex  template.aux  template.bbl  template.bib  template.blg  template.fdb_latexmk  template.fls  template.tex
src/: flow.py  latent_ddpm.py  plot_prior_posterior_panels.py  vae_bernoulli.py
